WIP: API and test development
