# src/main/java/dlmartin/transaction/model/dao/ITransactionDAO.java
@@ -1,0 +1,16 @@
+package dlmartin.transaction.model.dao;
+
+import java.util.List;
+
+import org.springframework.data.repository.CrudRepository;
+
+import dlmartin.transaction.model.entities.Transaction;
+
+public interface ITransactionDAO extends CrudRepository<Transaction, String>{
+
+	 public List<Transaction> findAllByOrderByAmountDesc();
+	 public List<Transaction> findAllByOrderByAmountAsc();
+	 public List<Transaction> findByAccountIban(String accountIban);
+	 public List<Transaction> findByAccountIbanByOrderByAmountDesc(String accountIban);
+	 public List<Transaction> findByAccountIbanByOrderByAmountAsc(String accountIban);
+}
